@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.92-8
 VersionNote: 0.92-7 on 2016-11-30 on CRAN
-Date: 2017-09-26
+Date: 2017-10-10
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch")
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
